Text: Refactorización del idioma en html

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         </li> 
       </ul>
     </div>
-    <button id="submit">Siguiente</button>
+    <button id="submit">Next</button>
   </div>
   
 </body>
